[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hubitat-ssl-certificate"
version = "0.1.0"
description = ""
authors = [
  { name="John L. Villalovos", email="john@sodarock.com" },
]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
hubitat-ssl-certificate = "hubitat_ssl_certificate.hubitat_ssl_certificate:main"

[project.urls]
# "Homepage" = "https://"
# "Bug Tracker" = "https://"

[tool.black]
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
multi_line_output = 3
order_by_type = true
force_sort_within_sections = true

[tool.mypy]
files = "."
strict = true
show_error_codes = true

[tool.pylint.messages_control]
max-line-length = 88
jobs = 0  # Use auto-detected number of multiple processes to speed up Pylint.
disable = [
    "duplicate-code",
    "fixme",
    "invalid-name",
    "logging-fstring-interpolation",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
]

[tool.pytest.ini_options]
xfail_strict = true

# If 'log_cli=True' the following apply
# NOTE: If set 'log_cli_level' to 'DEBUG' will show a log of all of the HTTP requests
# made in functional tests.
log_cli_level = "INFO"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] (%(filename)s:%(funcName)s:L%(lineno)s) %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
